Create seperate components for Map rendering and Map details

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,12 @@
-<div id="map">
+<div class="container-fluid">
+    <div class="row" style="height:48px">
+        <h1>Dashboard</h1>
+    </div>
+    <div class="row">
+        <div class="col-md-10">
+            <app-mapcomponent></app-mapcomponent>
+        </div>
+            
+    </div>
   
 </div>
