adding weather deatail component

--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -1,3 +1,8 @@
-<div id="map">
+<div class="col-lg-9">
+  <div id="map">
+  </div>
+</div>
 
+<div class="col-lg-3">
+  <app-weather-detail></app-weather-detail>
 </div>
