Create seperate components for Map rendering and Map details

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
     </div>
     <div class="row">
         <div class="col-md-10">
-            <app-mapcomponent></app-mapcomponent>
+            <app-map></app-map>
         </div>
 
     </div>
