--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -1,8 +1,1 @@
-<div class="col-lg-9">
-  <div id="map">
-  </div>
-</div>
-
-<div class="col-lg-3">
-  <app-weather-detail></app-weather-detail>
-</div>
+<div id="map" class=""></div>
