Map on click notify done

--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -1,1 +1,9 @@
-<div id="map" class=""></div>
+
+
+<div class="row">
+    <div class="col-md-10">
+        <div id="map"class=""></div>
+    </div>
+    <app-mapdetail [mapObject]='mapObject'></app-mapdetail>
+   
+</div>
