--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -1,1 +1,7 @@
-<div id="map" class=""></div>
+<div class="col-lg-9">
+    <div id="map" class=""></div>
+</div>
+
+<div class="col-lg-3">
+    <app-weather-detail [selected_coord]="selectedCoordinates"></app-weather-detail>
+</div>
