Input setter added

--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -11,7 +11,7 @@
     <div class="col-md-10">
         <div id="map"class=""></div>
     </div>
-    <app-mapdetail [mapObject]='mapObject'></app-mapdetail>
+    <app-mapdetail [mapDetailObject]='mapObject'></app-mapdetail>
    
 </div> 
 
