added 3 grid columns

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,17 +1,7 @@
 <div class="container-fluid">
     <div class="p-grid p-dir">
-        <!-- header -->
-        <div class="row" style="height:48px">
-            <h1>Dashboard</h1>
-        </div>
+      <app-header></app-header>
     </div>
-    <div class="p-grid p-dir">
-      <div class="p-col-8">
-          <app-map></app-map>
-      </div>
-      <div class="p-col-4">
-        <h1>Side barr</h1>
-      </div>
-    </div>
-
+    <app-map></app-map>
 </div>
+
