--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -12,6 +12,9 @@
         <div id="map"class=""></div>
     </div>
     <app-mapdetail [mapDetailObject]='mapObject'></app-mapdetail>
-   
 </div> 
+
+<button (click)="getData()">Test zip</button>
+
+
 
