--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -1,24 +1,14 @@
 <div class="p-grid p-dir">
     <div class="p-col">
         <app-weather-detail [selected_coord]="selectedCoordinates"></app-weather-detail>
-        <div style="margin-top: 20px" class="p-grid p-dir">
+        <!-- <div style="margin-top: 20px" class="p-grid p-dir">
             <app-mapdetail [mapDetailObject]='mapObject'></app-mapdetail>
-        </div>
+        </div> -->
+        <app-static-weather-chart></app-static-weather-chart>
     </div>
-<div class="col-lg-3">
-    <app-weather-detail [selected_coord]="selectedCoordinates"></app-weather-detail>
-</div>
 
     <div class="p-col">
         <div style=height:60% id="map" class=""></div>
-<div class="col-lg-3">
-    
-    <app-static-weather-chart></app-static-weather-chart>
-</div>
-
-
-<div class="row">
-    <div class="col-md-10">
-        <div id="map" class=""></div>
     </div>
 </div>
+
