added map details and rainfall graph

--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -1,18 +1,21 @@
 <div class="p-grid p-dir">
     <div class="p-col">
         <app-weather-detail [selected_coord]="selectedCoordinates"></app-weather-detail>
-        <!-- <div style="margin-top: 20px" class="p-grid p-dir">
+
+        <div style="margin-top: 20px" class="p-grid p-dir">
+          <div class="p-col">
+            <app-static-weather-chart></app-static-weather-chart>
+          </div>
+
+          <div class="p-col">
             <app-mapdetail [mapDetailObject]='mapObject'></app-mapdetail>
-        </div> -->
-        <app-static-weather-chart></app-static-weather-chart>
+          </div>
+        </div>
     </div>
 
     <div class="p-col">
         <div style=height:60% id="map" class=""></div>
     </div>
-</div>
-<div>
-    <app-mapdetail [mapDetailObject]='mapObject'></app-mapdetail>
 </div>
 
 <button (click)="getData()">Test zip</button>
