--- a/src/app/mapdetail/mapdetail.component.html
+++ b/src/app/mapdetail/mapdetail.component.html
@@ -1,8 +1,14 @@
-<div class="container">
-    <table style="width:100%">
-        <tr *ngFor="let prop of Data">
-          <td>{{prop}}</td>
-          <td><span style=margin-left:30px>: {{_mapDetailObject[prop]}}</span></td>
-        </tr>
-    </table>
-</div>
+<p-table [value]="Data">
+  <ng-template pTemplate="header">
+      <tr>
+          <th>Feature</th>
+          <th>Value</th>
+      </tr>
+  </ng-template>
+  <ng-template pTemplate="body" let-dataItem>
+      <tr>
+          <td>{{dataItem}}</td>
+          <td>{{_mapDetailObject[dataItem]}}</td>
+      </tr>
+  </ng-template>
+</p-table>
