--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -12,7 +12,11 @@
     </div>
 </div>
 <div>
-    <app-mapdetail [mapDetailObject]='mapObject'></app-mapdetail>
+    <app-mapdetail [mapDetailObject]='mapObject'
+     [mapCoordinateObject] ='coordinateObject'
+     [mapType] = 'type' >
+
+    </app-mapdetail>
 </div>
 
 <button (click)="getData()">Test zip</button>
