--- a/src/app/mapdetail/mapdetail.component.html
+++ b/src/app/mapdetail/mapdetail.component.html
@@ -1,4 +1,4 @@
-<p-table [value]="Data">
+<p-table [value]="mapDatailKeys">
   <ng-template pTemplate="header">
       <tr>
           <th>Feature</th>
