resolving commit errors

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,16 @@
-<p>
-  <app-static-weather-chart [response]="weatherDataResponse"></app-static-weather-chart>
+<div class="p-grid p-dir">
+  <div class="p-col">
+    <app-static-weather-chart [response]="weatherDataResponse1"></app-static-weather-chart>
+  </div>
+  <div class="p-col">
+    <app-static-weather-chart [response]="weatherDataResponse2"></app-static-weather-chart>
+  </div>
+  <div class="p-col">
+    <app-static-weather-chart [response]="weatherDataResponse3"></app-static-weather-chart>
+  </div>
+  <div class="p-col">
+    <app-static-weather-chart [response]="weatherDataResponse4"></app-static-weather-chart>
+  </div>
+  
 
-</p>
+</div>
