--- a/src/app/static-weather-chart/static-weather-chart.component.html
+++ b/src/app/static-weather-chart/static-weather-chart.component.html
@@ -3,7 +3,7 @@
 <button class="btn" (click)="openDialogChart()" [disabled]="!isDataLoaded"></button>
 
 <div>
-    <div *ngIf="isAsyncReqSent; else chart">
+    <div *ngIf="!isDataLoaded; else chart">
         <mat-spinner></mat-spinner>
     </div>
 
