added dark style

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,16 +1,16 @@
 <div class="p-grid p-dir">
-  <div class="p-col">
+  <div class="p-col graph-box" >
     <app-static-weather-chart [response]="weatherDataResponse1"></app-static-weather-chart>
   </div>
-  <div class="p-col">
+  <div class="p-col graph-box">
     <app-static-weather-chart [response]="weatherDataResponse2"></app-static-weather-chart>
   </div>
-  <div class="p-col">
+  <div class="p-col graph-box">
     <app-static-weather-chart [response]="weatherDataResponse3"></app-static-weather-chart>
   </div>
-  <div class="p-col">
+  <div class="p-col graph-box">
     <app-static-weather-chart [response]="weatherDataResponse4"></app-static-weather-chart>
   </div>
-  
+
 
 </div>
