--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,7 @@
     <div class="p-grid p-dir">
       <app-header></app-header>
     </div>
+  <hr style="background-color: #bababa" />
     <app-map></app-map>
 </div>
 
