re arranged grid

--- a/src/app/weather-detail/weather-detail.component.html
+++ b/src/app/weather-detail/weather-detail.component.html
@@ -29,7 +29,9 @@
 
     </form>
 
-    <app-static-weather-chart [response]="weatherDataResponse"></app-static-weather-chart>
+    <div style="width: 70%; height: auto;">
+      <app-static-weather-chart [response]="weatherDataResponse"></app-static-weather-chart>
+    </div>
 
 
 </div>
