--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -1,17 +1,20 @@
 <div class="p-grid p-dir">
   <div class="p-col">
-    <app-weather-detail [selected_coord]="selectedCoordinates"></app-weather-detail>
+
 
     <div style="margin-top: 20px" class="p-grid p-dir">
+      <!--<div class="p-col">-->
+        <!--&lt;!&ndash; <app-static-weather-chart></app-static-weather-chart> &ndash;&gt;-->
+        <!--&lt;!&ndash; <app-static-weather-chart [response]="weatherDataResponse"></app-static-weather-chart> &ndash;&gt;-->
+        <!--<button (click)="getData()">Test zip</button>-->
+      <!--</div>-->
       <div class="p-col">
-        <!-- <app-static-weather-chart></app-static-weather-chart> -->
-        <!-- <app-static-weather-chart [response]="weatherDataResponse"></app-static-weather-chart> -->
-        <button (click)="getData()">Test zip</button>
+        <app-weather-detail [selected_coord]="selectedCoordinates"></app-weather-detail>
       </div>
 
-          <div class="p-col">
-            <app-mapdetail [mapDetailObject]='mapObject' [mapCoordinateObject]='coordinateObject'></app-mapdetail>
-          </div>
+      <div class="p-col">
+        <app-mapdetail [mapDetailObject]='mapObject' [mapCoordinateObject]='coordinateObject'></app-mapdetail>
+      </div>
 
       <div class="p-col">
         <div style="height:40%" id="map" class=""></div>
