--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,3 +1,9 @@
 .p-col.graph-box{
+  margin-left: 2px;
   border: 2px solid #cfd1d1;
+  background-color: #939696;
+}
+
+div label{
+  /*margin-left: 50%;*/
 }
