dding mock database and toggle buttons

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,20 +1,18 @@
 <div class="p-grid p-dir" style="margin-left: 15px; margin-top:20px">
   <div class="p-col graph-box" >
     <app-static-weather-chart [response]="weatherDataResponse1"></app-static-weather-chart>
-    <label>Graph1</label>
+    <label>Rathnapura</label>
   </div>
   <div class="p-col graph-box">
     <app-static-weather-chart [response]="weatherDataResponse2"></app-static-weather-chart>
-    <label>Graph2</label>
+    <label>Badulla</label>
   </div>
   <div class="p-col graph-box">
     <app-static-weather-chart [response]="weatherDataResponse3"></app-static-weather-chart>
-    <label>Graph3</label>
+    <label>Nuwara-Eliya</label>
   </div>
   <div class="p-col graph-box">
     <app-static-weather-chart [response]="weatherDataResponse4"></app-static-weather-chart>
-    <label>Graph4</label>
+    <label>Mathale</label>
   </div>
-
-
 </div>
