--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -4,9 +4,9 @@
 
     <div style="margin-top: 20px" class="p-grid p-dir">
       <!--<div class="p-col">-->
-        <!--&lt;!&ndash; <app-static-weather-chart></app-static-weather-chart> &ndash;&gt;-->
-        <!--&lt;!&ndash; <app-static-weather-chart [response]="weatherDataResponse"></app-static-weather-chart> &ndash;&gt;-->
-        <!--<button (click)="getData()">Test zip</button>-->
+      <!--&lt;!&ndash; <app-static-weather-chart></app-static-weather-chart> &ndash;&gt;-->
+      <!--&lt;!&ndash; <app-static-weather-chart [response]="weatherDataResponse"></app-static-weather-chart> &ndash;&gt;-->
+      <!--<button (click)="getData()">Test zip</button>-->
       <!--</div>-->
       <div class="p-col">
         <app-weather-detail [selected_coord]="selectedCoordinates"></app-weather-detail>
@@ -21,23 +21,28 @@
         <form>
           <label>
             Landslides:
-            <p-inputSwitch (onChange)="landslideChange($event)" [(ngModel)]="checked" [ngModelOptions]="{standalone: true}"></p-inputSwitch>
+
+            <mat-slide-toggle (change)="landslideChange($event)" [checked]="checked_landslide" [disabled]="isFetchingShapeFile">
+
+            </mat-slide-toggle>
+            <!-- <p-inputSwitch (onChange)="landslideChange($event)" [(ngModel)]="checked" [ngModelOptions]="{standalone: true}"></p-inputSwitch> -->
           </label>
           <label>
             Land Use:
-            <p-inputSwitch (onChange)="landuseChange($event)"></p-inputSwitch>
+            <mat-slide-toggle (change)="landuseChange($event)" [disabled]="isFetchingShapeFile">
+
+            </mat-slide-toggle> <!-- <p-inputSwitch (onChange)="landuseChange($event)"></p-inputSwitch> -->
           </label>
           <label>
             Geology:
-            <p-inputSwitch (onChange)="geologyChange($event)"></p-inputSwitch>
+            <mat-slide-toggle (change)="geologyChange($event)" [disabled]="isFetchingShapeFile">
+
+            </mat-slide-toggle> <!-- <p-inputSwitch (onChange)="geologyChange($event)"></p-inputSwitch> -->
           </label>
         </form>
 
-
-        <button (click)="getData()">Test zip</button>
+        <!--  <button (click)="getData()">Test zip</button> -->
       </div>
     </div>
-    </div>
   </div>
-
-
+</div>
