--- a/src/app/mapdetail/mapdetail.component.html
+++ b/src/app/mapdetail/mapdetail.component.html
@@ -1,35 +1,40 @@
-<table>
-  <tr>
-    <td *ngIf="isClick">
-      <span style="font-weight: bold">Latitude</span>
-    </td>
-    <td>
-      <div style="margin-left: 5px" *ngIf="isClick">:  {{_mapCoordinateObject['lat'] | number : '1.2-2'}}</div>
-    </td>
-  </tr>
+<p-sidebar [(visible)]="display" position="right">
 
-  <tr>
-    <td *ngIf="isClick">
-      <span style="font-weight: bold">Longitude</span>
-    </td>
 
-    <td>
-      <div style="margin-left: 5px" *ngIf="isClick">:  {{_mapCoordinateObject['lng'] | number : '1.2-2'}}</div>
-    </td>
-  </tr>
-</table>
+  <table>
+    <tr>
+      <td *ngIf="isClick">
+        <span style="font-weight: bold">Latitude</span>
+      </td>
+      <td>
+        <div style="margin-left: 5px" *ngIf="isClick">: {{_mapCoordinateObject['lat'] | number : '1.2-2'}}</div>
+      </td>
+    </tr>
 
-<p-table [value]="mapDatailKeys" [scrollable]="true" scrollHeight="200px" [resizableColumns]="true">
-  <ng-template pTemplate="header">
+    <tr>
+      <td *ngIf="isClick">
+        <span style="font-weight: bold">Longitude</span>
+      </td>
+
+      <td>
+        <div style="margin-left: 5px" *ngIf="isClick">: {{_mapCoordinateObject['lng'] | number : '1.2-2'}}</div>
+      </td>
+    </tr>
+  </table>
+
+  <p-table [value]="mapDatailKeys" [scrollable]="true" scrollHeight="200px" [resizableColumns]="true">
+    <ng-template pTemplate="header">
       <tr>
-          <th>Feature</th>
-          <th>Value</th>
+        <th>Feature</th>
+        <th>Value</th>
       </tr>
-  </ng-template>
-  <ng-template pTemplate="body" let-dataItem>
+    </ng-template>
+    <ng-template pTemplate="body" let-dataItem>
       <tr>
-          <td>{{dataItem}}</td>
-          <td>{{_mapDetailObject[dataItem]}}</td>
+        <td>{{dataItem}}</td>
+        <td>{{_mapDetailObject[dataItem]}}</td>
       </tr>
-  </ng-template>
-</p-table>
+    </ng-template>
+  </p-table>
+
+</p-sidebar>
