--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
     <div class="p-grid p-dir">
       <app-header></app-header>
     </div>
-  <hr style="background-color: #bababa" />
+  <hr style="background-color: #F1F1F1" />
     <app-map></app-map>
 </div>
 
